--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body{
     justify-content: center;
     background-color: #fafafa;
     padding: 0 1.5em;
+    
 }
 
 span{
@@ -107,21 +108,9 @@ span{
     margin-bottom: 3rem;
 }
 
-.read-more{
-    display: inline-block;
-    padding: 1.5rem 3rem;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    color: #ffff;
-    text-decoration: none;
-    background: linear-gradient(to right, #c945cf 0% , #04a6bd 100%);
-    border-radius: .8rem;
-}
 
-.read-more:hover{
-    background: linear-gradient(to right, #04a6bd 0% , #c945cf 100%);
-}
+
+
 
 @media  screen and (max-width: 1068px){
     .blog-post{
@@ -135,10 +124,10 @@ span{
     }
 
     .container h2{
-        margin-top: 120px;
-        margin-left: 275px;
+        margin-top: 30px;
+        margin-left: 305px;
     }
-}
+} 
 
 @media  screen and (max-width: 868px){
     .blog-post{
@@ -149,24 +138,25 @@ span{
     
 
     .container h2{
-        margin-top: 20px;
-        margin-left: 142px;
+        margin-top: 60px;
+        margin-left: 285px;
     }
-}
+} 
 
 @media  screen and (max-width: 823px){
     
 
     .container h2{
-        margin-top: 35px;
-        margin-left: 142px;
+        margin-top: 45px;
+        margin-left: 282px;
     }
-}
+} 
 
 @media  screen and (max-width: 768px){
     .blog-post{
-        padding: 2.5rem;
+        max-width: 60rem;
         flex-direction: column;
+        
         
     }
 
@@ -174,13 +164,20 @@ span{
         max-width: 100%;
         min-width: 100%;
         transform: translate(0, .1rem);
-    }
+        padding-bottom: 10px;
+    } 
 
     
 
     .container h2{
-        margin-top: auto;
+        margin-top: 450px;
+        margin-left: 200px;
+
         
-    }
+        
+        
+        
+        
+    } 
 } 
 
