--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@ html{
 }
 
 body{
-    width: 100%;
-    height: 100vh;
+    width: 100vw;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,9 +28,7 @@ span{
 }
 
 
-.container{
-    margin-top: 650px;
-}
+
 
 .container h2{
     letter-spacing: 1px;
